--- a/www/css/index.css
+++ b/www/css/index.css
@@ -22,6 +22,11 @@ input {
     padding: 2px 8px;
 }
 
+button {
+    all: unset;
+    cursor: pointer;
+}
+
 .tasklist {
     display: flex;
     flex-direction: column;
@@ -30,4 +35,26 @@ input {
     border-radius: 10px;
     box-shadow: 0 0 10px black;
     padding: 25px;
+    min-width: 350px;
+}
+
+.tasklist .list {
+    padding: 8px;
+    background-color: rgba(255, 255, 255, 0.1);
+    border: 1px solid rgba(255, 255, 255, 0.4);
+    border-radius: 8px;
+    min-height: 80px;
+    margin-bottom: 20px;
+}
+
+#inputBtn {
+    background-color: rgb(60, 107, 164);
+    padding: 4px 8px;
+    border-radius: 8px;
+    text-align: center;
+    transition: 0.4s ease;
+}
+
+#inputBtn:hover {
+    background-color: rgb(74, 133, 205);
 }
