--- a/www/css/index.css
+++ b/www/css/index.css
@@ -46,7 +46,7 @@ button {
     border-radius: 8px;
     height: 200px;
     margin-bottom: 20px;
-    overflow: hidden;
+    overflow-y: scroll;
 }
 
 .tasklist .list .task {
