--- a/www/css/index.css
+++ b/www/css/index.css
@@ -15,13 +15,6 @@ body, html {
     background-color: rgb(41, 41, 41);
 }
 
-input {
-    all: unset;
-    background-color: rgba(255, 255, 255, 0.2);
-    border-radius: 8px;
-    padding: 2px 8px;
-}
-
 button {
     all: unset;
     cursor: pointer;
@@ -46,7 +39,7 @@ button {
     border-radius: 8px;
     height: 200px;
     margin-bottom: 20px;
-    overflow-y: scroll;
+    overflow-y: auto;
 }
 
 .tasklist .list .task {
@@ -61,7 +54,7 @@ button {
 
 #inputBtn {
     background-color: rgb(60, 107, 164);
-    padding: 6px 10px;
+    padding: 10px 10px;
     border-radius: 8px;
     text-align: center;
     transition: 0.4s ease;
