--- a/www/css/index.css
+++ b/www/css/index.css
@@ -28,7 +28,8 @@ button {
     border-radius: 10px;
     box-shadow: 0 0 10px black;
     padding: 25px;
-    min-width: 350px;
+    min-width: 500px;
+    max-width: 500px;
 }
 
 .tasklist .list {
@@ -38,7 +39,7 @@ button {
     border: 1px solid rgba(255, 255, 255, 0.4);
     border-radius: 8px;
     height: 200px;
-    width: 300px;
+    width: 100%;
     margin-bottom: 20px;
     overflow-y: auto;
 }
@@ -47,19 +48,26 @@ button {
     display: flex;
     flex-direction: row;
     justify-content: space-between;
-    padding: 3px 10px;
+    padding: 5px 5px;
     width: 100%;
-    height: 25px;
+    max-height: 200px;
     transition: 0.3s ease;
 }
 
 .tasklist .list .task.hidden {
     pointer-events: none;
     transform: translateX(-50px);
-    height: 0px;
-    margin-top: -3px;
-    margin-bottom: -3px;
+    max-height: 0px;
+    padding: 0;
     opacity: 0;
+}
+
+.tasklist .list .task > div {
+    display: flex;
+    flex-direction: row;
+    overflow: hidden;
+    border-radius: 8px;
+    margin-left: 10px;
 }
 
 #inputBtn {
@@ -74,16 +82,70 @@ button {
     background-color: rgb(74, 133, 205);
 }
 
-.delBtn {
+.delBtn,
+.editBtn,
+.saveBtn {
     display: flex;
     align-items: center;
     justify-content: center;
-    background-color: rgb(199, 49, 49);
-    min-width: 30px;
-    height: 20px;
-    font-size: 13px;
-    border-radius: 8px;
+    max-width: 40px;
+    padding-inline: 10px;
+    height: 25px;
     text-align: center;
-    margin-left: 10px;
+    overflow: hidden;
     transition: 0.4s ease;
+}
+
+.delBtn {
+    background-color: rgb(199, 49, 49);
+}
+
+.delBtn:hover {
+    background-color: rgb(239, 64, 64);
+}
+
+.saveBtn {
+    font-size: 13px;
+    background-color: rgb(29, 199, 51);
+    max-width: 0;
+    padding-inline: 0;
+}
+
+.saveBtn:hover {
+    background-color: rgb(38, 218, 62);
+}
+
+.editBtn {
+    font-size: 13px;
+    background-color: rgb(100, 100, 100);
+}
+
+.editBtn:hover {
+    background-color: rgb(128, 128, 128);
+}
+
+.taskText {
+    all: unset;
+    padding-inline: 3px;
+    border: 1px solid transparent;
+    pointer-events: none;
+    border-radius: 4px;
+    transition: 0.3s ease;
+}
+
+.taskText.editable {
+    pointer-events: all;
+    border-color: gray;
+}
+
+.task:has(.taskText.editable) .delBtn,
+.task:has(.taskText.editable) .editBtn {
+    max-width: 0px;
+    padding-inline: 0;
+    color: transparent;
+}
+
+.task:has(.taskText.editable) .saveBtn {
+    max-width: 50px;
+    padding-inline: 10px;
 }
